docs/0.20.1/_sources/user-guide/model-gallery/spectral/plot_powerlaw2.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/spectral/plot_powerlaw2.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_model-gallery_spectral_plot_powerlaw2.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_spectral_plot_powerlaw2.py:


.. _powerlaw2-spectral-model:

Power law 2 spectral model
==========================

This model parametrises a power law spectrum with integral as amplitude parameter.

It is defined by the following equation:

.. math::
    \phi(E) = F_0 \cdot \frac{\Gamma + 1}{E_{0, max}^{-\Gamma + 1}
     - E_{0, min}^{-\Gamma + 1}} \cdot E^{-\Gamma}

See also: https://fermi.gsfc.nasa.gov/ssc/data/analysis/scitools/source_models.html

.. GENERATED FROM PYTHON SOURCE LINES 19-22

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 22-37

.. code-block:: default


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import Models, PowerLaw2SpectralModel, SkyModel

    energy_bounds = [0.1, 100] * u.TeV
    model = PowerLaw2SpectralModel(
        amplitude=u.Quantity(1e-12, "cm-2 s-1"),
        index=2.3,
        emin=1 * u.TeV,
        emax=10 * u.TeV,
    )
    model.plot(energy_bounds)
    plt.grid(which="both")




.. image-sg:: /user-guide/model-gallery/spectral/images/sphx_glr_plot_powerlaw2_001.png
   :alt: plot powerlaw2
   :srcset: /user-guide/model-gallery/spectral/images/sphx_glr_plot_powerlaw2_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-41

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 41-46

.. code-block:: default


    model = SkyModel(spectral_model=model, name="power-law2-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    components:
    -   name: power-law2-model
        type: SkyModel
        spectral:
            type: PowerLaw2SpectralModel
            parameters:
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1
            -   name: index
                value: 2.3
            -   name: emin
                value: 1.0
                unit: TeV
                frozen: true
            -   name: emax
                value: 10.0
                unit: TeV
                frozen: true






.. _sphx_glr_download_user-guide_model-gallery_spectral_plot_powerlaw2.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_powerlaw2.py <plot_powerlaw2.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_powerlaw2.ipynb <plot_powerlaw2.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
